@@ -3,10 +3,15 @@ package template
 import "github.com/elastic/beats/libbeat/common"
 
 type TemplateConfig struct {
-	Enabled      bool             `config:"enabled"`
-	Name         string           `config:"name"`
-	Pattern      string           `config:"pattern"`
-	Fields       string           `config:"fields"`
+	Enabled bool   `config:"enabled"`
+	Name    string `config:"name"`
+	Pattern string `config:"pattern"`
+	Fields  string `config:"fields"`
+	JSON    struct {
+		Enabled bool   `config:"enabled"`
+		Path    string `config:"path"`
+		Name    string `config:"name"`
+	} `config:"json"`
 	AppendFields common.Fields    `config:"append_fields"`
 	Overwrite    bool             `config:"overwrite"`
 	Settings     TemplateSettings `config:"settings"`
