@@ -1,7 +1,10 @@
 package template
 
 import (
+	"encoding/json"
 	"fmt"
+	"io/ioutil"
+	"os"
 
 	"github.com/elastic/beats/libbeat/beat"
 	"github.com/elastic/beats/libbeat/common"
@@ -51,40 +54,60 @@ func (l *Loader) Load() error {
 		return fmt.Errorf("error creating template instance: %v", err)
 	}
 
+	templateName := tmpl.GetName()
+	if l.config.JSON.Enabled {
+		templateName = l.config.JSON.Name
+	}
 	// Check if template already exist or should be overwritten
-	exists := l.CheckTemplate(tmpl.GetName())
+	exists := l.CheckTemplate(templateName)
 	if !exists || l.config.Overwrite {
 
 		logp.Info("Loading template for Elasticsearch version: %s", l.client.GetVersion())
-
 		if l.config.Overwrite {
 			logp.Info("Existing template will be overwritten, as overwrite is enabled.")
 		}
 
-		var output common.MapStr
+		var template map[string]interface{}
+		if l.config.JSON.Enabled {
+			jsonPath := paths.Resolve(paths.Config, l.config.JSON.Path)
+			if _, err := os.Stat(jsonPath); err != nil {
+				return fmt.Errorf("error checking for json template: %s", err)
+			}
 
-		// Load fields from path
-		if l.config.Fields != "" {
+			logp.Info("Loading json template from file %s", jsonPath)
+
+			content, err := ioutil.ReadFile(jsonPath)
+			if err != nil {
+				return fmt.Errorf("error reading file. Path: %s, Error: %s", jsonPath, err)
+
+			}
+			err = json.Unmarshal(content, &template)
+			if err != nil {
+				return fmt.Errorf("could not unmarshal json template: %s", err)
+			}
+			// Load fields from path
+		} else if l.config.Fields != "" {
 			logp.Debug("template", "Load fields.yml from file: %s", l.config.Fields)
 
 			fieldsPath := paths.Resolve(paths.Config, l.config.Fields)
 
-			output, err = tmpl.LoadFile(fieldsPath)
+			template, err = tmpl.LoadFile(fieldsPath)
 			if err != nil {
 				return fmt.Errorf("error creating template from file %s: %v", fieldsPath, err)
 			}
 		} else {
 			logp.Debug("template", "Load default fields.yml")
-			output, err = tmpl.LoadBytes(l.fields)
+			template, err = tmpl.LoadBytes(l.fields)
 			if err != nil {
 				return fmt.Errorf("error creating template: %v", err)
 			}
 		}
 
-		err = l.LoadTemplate(tmpl.GetName(), output)
+		err = l.LoadTemplate(templateName, template)
 		if err != nil {
-			return fmt.Errorf("could not load template. Elasticsearh returned: %v. Template is: %s", err, output)
+			return fmt.Errorf("could not load template. Elasticsearh returned: %v. Template is: %s", err, template)
 		}
+
 	} else {
 		logp.Info("Template already exists and will not be overwritten.")
 	}
