@@ -1,0 +1,22 @@
+{
+    "index_patterns": ["bla"],
+    "settings": {
+        "number_of_shards": 1
+    },
+    "mappings": {
+        "example": {
+            "_source": {
+                "enabled": false
+            },
+            "properties": {
+                "host_name": {
+                    "type": "keyword"
+                },
+                "created_at": {
+                    "type": "date",
+                    "format": "EEE MMM dd HH:mm:ss Z YYYY"
+                }
+            }
+        }
+    }
+}
