@@ -73,6 +73,12 @@ setup.template:
     index.codec: best_compression
   name: {{ es_template_name }}
   pattern: {{ es_template_pattern }}
+  overwrite: {{ template_overwrite|default("false") }}
+  json:
+    enabled: {{ template_json_enabled|default("false") }}
+    path: {{ template_json_path }}
+    name: {{ template_json_name }}
+
 #================================ Logging =====================================
 
 {% if metrics_period -%}
