@@ -1,4 +1,10 @@
 from base import BaseTest
+import os
+from elasticsearch import Elasticsearch, TransportError
+from nose.plugins.attrib import attr
+import unittest
+
+INTEGRATION_TESTS = os.environ.get('INTEGRATION_TESTS', False)
 
 
 class Test(BaseTest):
@@ -72,3 +78,36 @@ class Test(BaseTest):
         proc = self.start_beat()
         self.wait_until(lambda: self.log_contains("mockbeat start running."))
         proc.check_kill_and_wait()
+
+    @unittest.skipUnless(INTEGRATION_TESTS, "integration test")
+    @attr('integration')
+    def test_json_template(self):
+        """
+        Test loading of json based template
+        """
+
+        self.copy_files(["template.json"])
+
+        path = os.path.join(self.working_dir, "template.json")
+
+        print path
+        self.render_config_template(
+            elasticsearch={"hosts": self.get_host()},
+            template_overwrite="true",
+            template_json_enabled="true",
+            template_json_path=path,
+            template_json_name="bla",
+        )
+
+        proc = self.start_beat()
+        self.wait_until(lambda: self.log_contains("mockbeat start running."))
+        self.wait_until(lambda: self.log_contains("Loading json template from file"))
+        self.wait_until(lambda: self.log_contains("Elasticsearch template with name 'bla' loaded"))
+        proc.check_kill_and_wait()
+
+        es = Elasticsearch([self.get_elasticsearch_url()])
+        result = es.transport.perform_request('GET', '/_template/bla')
+        assert len(result) == 1
+
+    def get_host(self):
+        return os.getenv('ES_HOST', 'localhost') + ':' + os.getenv('ES_PORT', '9200')
